# EMLL

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  ReadMe_ZH.md
doc/: Usage_EN.md  Usage_ZH.md
example/: CMakeLists.txt  Gemm.c  Usage_EN.md  Usage_ZH.md
include/: Gemm.h  Layer.h  Quant.h
include/arm_neon/: ARMCompareAndSwap.h  ARMCpuType.h  NeonBias.h  NeonExtreme.h  NeonI8I32DotGemmSkinnyDot.h  NeonI8I32MlaGemmCopy.h  NeonI8I32MlaGemmKernel.h  NeonI8I32MlaGemmSkinnyDot.h  NeonI8I32MlaGemmSkinnyGer.h  NeonIntOpSign.h  NeonQuant.h  NeonSgemmCopy.h  NeonSgemmKernel.h  NeonSum.h
include/common/: CommonCopy.h  CommonDriver.h  CommonKernel.h  CommonLayer.h  CommonQuant.h  CommonSched.h  CommonSkinnyDot.h  CommonSkinnyGer.h  CommonTest.h  ExpandMacro.h
include/neon_armv7a/: Bias.h  I8I32MlaGemmKernel.h  S8S32MlaGemmCopy.h  S8S32MlaGemmDriver.h  S8S32MlaGemmKernel.h  S8S32MlaGemmSkinnyDot.h  S8S32MlaGemmSkinnyGer.h  SgemmCopy.h  SgemmKernel.h  SgemmSkinnyDot.h  SgemmSkinnyGer.h  U8U32MlaGemmCopy.h  U8U32MlaGemmKernel.h  U8U32MlaGemmSkinnyDot.h  U8U32MlaGemmSkinnyGer.h
include/neon_armv8a/: Bias.h  HgemmCopy.h  HgemmDriver.h  HgemmKernel.h  HgemmSkinnyDot.h  HgemmSkinnyGer.h  I8I32DotGemmCopy.h  I8I32DotGemmKernel.h  I8I32MlaGemmKernel.h  I8I32MlaGemmSkinnyDot.h  S8S32DotGemmCopy.h  S8S32DotGemmDriver.h  S8S32DotGemmKernel.h  S8S32DotGemmSkinnyDot.h  S8S32MlaGemmCopy.h  S8S32MlaGemmKernel.h  S8S32MlaGemmSkinnyDot.h  S8S32MlaGemmSkinnyGer.h  SgemmCopy.h  SgemmDriver.h  SgemmKernel.h  SgemmSkinnyDot.h  SgemmSkinnyGer.h  U8U32DotGemmCopy.h  U8U32DotGemmDriver.h  U8U32DotGemmKernel.h  U8U32DotGemmSkinnyDot.h  U8U32MlaGemmCopy.h  U8U32MlaGemmDriver.h  U8U32MlaGemmKernel.h  U8U32MlaGemmSkinnyDot.h  U8U32MlaGemmSkinnyGer.h
include/neon_armv8a/sgemm_skinny_dot_kernel/: ReadME.md  SgemmSkinnyDotA35.h  SgemmSkinnyDotA53.h  SgemmSkinnyDotA7x.h  SgemmSkinnyDotCopy.h  SgemmSkinnyDotDriver.h  SgemmSkinnyDotKernelA35.h  SgemmSkinnyDotKernelA53.h  SgemmSkinnyDotKernelA7x.h
src/arm_neon/: ARMCompareAndSwap.c  ARMCpuType.c
src/neon_armv7a/: Bias.c  Layer.c  S8S32GemmDriver.c  S8S32MlaGemmCopy.c  S8S32MlaGemmDriver.c  S8S32MlaGemmKernel.c  S8S32MlaGemmSkinnyDot.c  S8S32MlaGemmSkinnyGer.c  SgemmCopy.c  SgemmDriver.c  SgemmKernel.c  SgemmSkinnyDot.c  SgemmSkinnyGer.c  U8U32GemmDriver.c  U8U32MlaGemmCopy.c  U8U32MlaGemmDriver.c  U8U32MlaGemmKernel.c  U8U32MlaGemmSkinnyDot.c  U8U32MlaGemmSkinnyGer.c
src/neon_armv8a/: Bias.c  HgemmDriver.c  Layer.c  Quant.c  S8S32DotGemmDriver.c  S8S32GemmDriver.c  S8S32MlaGemmCopy.c  S8S32MlaGemmDriver.c  S8S32MlaGemmKernel.c  S8S32MlaGemmSkinnyDot.c  S8S32MlaGemmSkinnyGer.c  SgemmCopy.c  SgemmDriver.c  SgemmKernel.c  SgemmSkinnyDot.c  SgemmSkinnyGer.c  U8U32DotGemmDriver.c  U8U32GemmDriver.c  U8U32MlaGemmCopy.c  U8U32MlaGemmDriver.c  U8U32MlaGemmKernel.c  U8U32MlaGemmSkinnyDot.c  U8U32MlaGemmSkinnyGer.c
src/neon_armv8a/extension/: HgemmCopy.c  HgemmKernel.c  HgemmSkinnyDot.c  HgemmSkinnyGer.c  S8S32DotGemmCopy.c  S8S32DotGemmKernel.c  S8S32DotGemmSkinnyDot.c  U8U32DotGemmCopy.c  U8U32DotGemmKernel.c  U8U32DotGemmSkinnyDot.c
src/neon_armv8a/sgemm_skinny_dot_kernel/: SgemmSkinnyDotA35.c  SgemmSkinnyDotA53.c  SgemmSkinnyDotA7x.c  SgemmSkinnyDotCopy.c
test/: TestBias.c  TestCompilerOpenMP.c  TestGemm.c  TestQuant.c
